# DocumentTranslatorSL

./: .replit  README.md  app.py  models.py  pyproject.toml
attached_assets/: .md
nginx/: translation-service.conf
setup/: install.sh
static/css/: style.css
static/js/: main.js
temp/uploads/: b44d5664-45cf-42b0-99f2-495421c8e7ef_HEMIN.docx
templates/: index.html
utils/: bedrock_translator.py  document_processor.py  file_manager.py
